@@ -5,7 +5,7 @@ namespace SJBR\SrFeuserRegister\Request;
  *  Copyright notice
  *
  *  (c) 2007-2012 Franz Holzinger <franz@ttproducts.de>
- *  (c) 2012-2015 Stanislas Rolland <typo3(arobas)sjbr.ca>
+ *  (c) 2012-2017 Stanislas Rolland <typo3(arobas)sjbr.ca>
  *  All rights reserved
  *
  *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -29,7 +29,7 @@ use SJBR\SrFeuserRegister\Security\SessionData;
 use SJBR\SrFeuserRegister\Utility\HashUtility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 use TYPO3\CMS\Core\Utility\MathUtility;
-use TYPO3\CMS\Core\Utility\VersionNumberUtility;
+use TYPO3\CMS\Frontend\Page\PageRepository;
 use TYPO3\CMS\Frontend\Plugin\AbstractPlugin;
 
 /**
@@ -214,16 +214,14 @@ class Parameters
 	protected function setPassword()
 	{
 		if ($this->theTable === 'fe_users' && isset($this->conf['create.']['evalValues.']['password'])) {
-			// Establish compatibility with the extension Felogin (TYPO3 6.2)
+			// Establish compatibility with the extension Felogin
 			$password = GeneralUtility::_GP('pass');
 			$password_again = '';
-			if (VersionNumberUtility::convertVersionNumberToInteger(VersionNumberUtility::getNumericTypo3Version()) >= 7000000) {
-				$fe = GeneralUtility::_POST('FE');
-				if (isset($fe) && is_array($fe)) {
-					$feDataArray = $fe[$this->theTable];
-					if (isset($feDataArray['password_again'])) {
-						$password_again = $feDataArray['password_again'];
-					}
+			$fe = GeneralUtility::_POST('FE');
+			if (isset($fe) && is_array($fe)) {
+				$feDataArray = $fe[$this->theTable];
+				if (isset($feDataArray['password_again'])) {
+					$password_again = $feDataArray['password_again'];
 				}
 			}
 			if (isset($password)) {
@@ -333,7 +331,7 @@ class Parameters
 	 */
 	protected function setPidTitle()
 	{
-		$pidRecord = GeneralUtility::makeInstance('TYPO3\\CMS\\Frontend\\Page\\PageRepository');
+		$pidRecord = GeneralUtility::makeInstance(PageRepository::class);
 		$pidRecord->init(0);
 		$pidRecord->sys_language_uid = (int) $GLOBALS['TSFE']->config['config']['sys_language_uid'];
 		$row = $pidRecord->getPage((int) $this->getPid());
